FIX-files register and login- api services